# zpacloud-ansible

./: .ansible-lint  .buildinfo  .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Makefile  README.md  SUPPORT.md  authentication.html  codecov.yml  common_return_values.html  community_guides.html  convert_to_utf8.py  examples.html  galaxy.yml  genindex.html  index.html  installation.html  license.html  modules.html  objects.inv  pyproject.toml  release_notes.html  requirements.html  requirements.txt  sanity.py  search.html  searchindex.js  support.html  troubleshooting.html
.cursor/rules/: zpa-collection-standards.mdc  zpa-testing-gates.mdc
.doctrees/: authentication.doctree  common_return_values.doctree  community_guides.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  license.doctree  modules.doctree  release_notes.doctree  requirements.doctree  support.doctree  troubleshooting.doctree
.doctrees/modules/: zpa_app_connector_controller_facts_module.doctree  zpa_app_connector_controller_info_module.doctree  zpa_app_connector_controller_module.doctree  zpa_app_connector_group_facts_module.doctree  zpa_app_connector_group_info_module.doctree  zpa_app_connector_groups_facts_module.doctree  zpa_app_connector_groups_module.doctree  zpa_app_protection_all_predefined_controls_facts_module.doctree  zpa_app_protection_all_predefined_controls_info_module.doctree  zpa_app_protection_custom_control_facts_module.doctree  zpa_app_protection_custom_control_info_module.doctree  zpa_app_protection_custom_control_module.doctree  zpa_app_protection_predefined_control_facts_module.doctree  zpa_app_protection_predefined_control_info_module.doctree  zpa_app_protection_security_profile_facts_module.doctree  zpa_app_protection_security_profile_info_module.doctree  zpa_app_protection_security_profile_module.doctree  zpa_application_segment_ba_v2_module.doctree  zpa_application_segment_browser_access_facts_module.doctree  zpa_application_segment_browser_access_info_module.doctree  zpa_application_segment_browser_access_module.doctree  zpa_application_segment_by_type_facts_module.doctree  zpa_application_segment_by_type_info_module.doctree  zpa_application_segment_facts_module.doctree  zpa_application_segment_info_module.doctree  zpa_application_segment_inspection_module.doctree  zpa_application_segment_module.doctree  zpa_application_segment_multimatch_bulk_info_module.doctree  zpa_application_segment_multimatch_bulk_module.doctree  zpa_application_segment_pra_module.doctree  zpa_application_segment_weightedlb_config_info_module.doctree  zpa_application_segment_weightedlb_config_module.doctree  zpa_application_server_facts_module.doctree  zpa_application_server_info_module.doctree  zpa_application_server_module.doctree  (+117 more)
.github/: do-release.sh  set-version.sh
_sources/: authentication.rst.txt  community_guides.rst.txt  examples.rst.txt  index.rst.txt  installation.rst.txt  release_notes.rst.txt  requirements.rst.txt
docs/: contributing.md  history.md
docs/source/: conf.py  (+9 more)
examples/: main.yml  main1.yml  zpa_app_connector_groups.yml  zpa_policy_access_rule.yml
modules/: zpa_app_connector_controller_facts_module.html  zpa_app_connector_controller_info_module.html  zpa_app_connector_controller_module.html  zpa_app_connector_group_facts_module.html  zpa_app_connector_group_info_module.html  zpa_app_connector_groups_facts_module.html  zpa_app_connector_groups_module.html  zpa_app_protection_all_predefined_controls_facts_module.html  zpa_app_protection_all_predefined_controls_info_module.html  zpa_app_protection_custom_control_facts_module.html  zpa_app_protection_custom_control_info_module.html  zpa_app_protection_custom_control_module.html  zpa_app_protection_predefined_control_facts_module.html  zpa_app_protection_predefined_control_info_module.html  zpa_app_protection_security_profile_facts_module.html  zpa_app_protection_security_profile_info_module.html  zpa_app_protection_security_profile_module.html  zpa_application_segment_ba_v2_module.html  zpa_application_segment_browser_access_facts_module.html  zpa_application_segment_browser_access_info_module.html  zpa_application_segment_browser_access_module.html  zpa_application_segment_by_type_facts_module.html  zpa_application_segment_by_type_info_module.html  zpa_application_segment_facts_module.html  zpa_application_segment_info_module.html  zpa_application_segment_inspection_module.html  zpa_application_segment_module.html  zpa_application_segment_multimatch_bulk_info_module.html  zpa_application_segment_multimatch_bulk_module.html  zpa_application_segment_pra_module.html  zpa_application_segment_weightedlb_config_info_module.html  zpa_application_segment_weightedlb_config_module.html  zpa_application_server_facts_module.html  zpa_application_server_info_module.html  zpa_application_server_module.html  zpa_ba_certificate_facts_module.html  zpa_ba_certificate_info_module.html  zpa_ba_certificate_module.html  zpa_branch_connector_group_info_module.html  zpa_browser_protection_info_module.html  (+112 more)
(+597 files in other folders)
