[tool.poetry]
name = "zpacloud-ansible"
version = "1.4.3"
description = "Ansible collection for Zscaler Private Access (ZPA)"
authors = ["Zscaler Technology Alliances <devrel@zscaler.com>"]
license = "MIT"
keywords = ["zpacloud", "zpacloud-ansible", "zpa"]
readme = "README.md"
homepage = "https://github.com/zscaler/zpacloud-ansible"
repository = "https://github.com/zscaler/zpacloud-ansible"

[tool.poetry.dependencies]
python = "^3.9"
zscaler-sdk-python = ">=0.10.4"
xmltodict = "^0.14.2"
aiohttp = ">=3.10.2"
dpath = "^2.1.5"
#rstcheck-core = "1.2.0"  # Using a specific version to ensure compatibility
#pydantic = "^2.0"  # Updated to meet rstcheck-core requirements
pytz = ">=2024.1"
netaddr = ">=1.2.1"
pycountry = ">=23.12.11"
sphinx-ansible-theme = "^0.10.3"
python-box = "^7.1.1"
jinja2 = ">=3.0.0"

[tool.poetry.dev-dependencies]
black = "24.3.0"
pytest = "^8.2.1"
coverage = ">=4.5.4"
pylint = "2.13.*"
pytest-xdist = "*"
pytest-mock = "*"
voluptuous = "*"
yamllint = "*"
sphinx = "^7.4.7"
sphinx-rtd-theme = "*"
sphinx_ansible_theme = "*"
#ansible-doc-extractor = "*"
antsibull-docs = "^2.11.0"
antsibull-changelog = "^0.26.0"
ansible-core = "*"
ansible-lint = "*"
rstcheck = "*"
six = "*"
pycodestyle = "*"
# from requirements.txt
certifi = ">=2024.2.2"
chardet = ">=5.2.0"
idna = ">=3.10"
requests = ">=2.22.0"
urllib3 = ">=2.0"
cryptography = ">=43.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
